# ledger

./: .gitignore  Cargo.toml  Makefile
crates/ledger-cli/: Cargo.toml
crates/ledger-cli/src/: main.rs
crates/ledger-cli/src/tui/: app.rs  daemon.rs  mod.rs  ui.rs
crates/ledger-client/: Cargo.toml  build.rs
crates/ledger-client/src/: lib.rs
crates/ledger-tui/: Cargo.toml
crates/ledger-tui/src/: app.rs  daemon.rs  event.rs  main.rs  ui.rs
crates/ledgerd/: Cargo.toml  build.rs
crates/ledgerd/src/: health.rs  main.rs  migrations.rs  server.rs  store.rs
crates/ledgerd/tests/: integration.rs
install/: com.ledger.daemon.plist  install.sh
proto/: ledger.proto
