[package]
name = "ledger-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper-util = "0.1"
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
