[package]
name = "ledger-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ledger-tui"
path = "src/main.rs"

[dependencies]
ledger-client = { path = "../ledger-client" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
chrono = "0.4"
serde_json = "1"
futures = "0.3"
