[package]
name = "ledgerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ledgerd"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
